--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
 body {
   background: #222;
 }
+.aiyus {
+  text-align: right;
+  margin-bottom: 20px;
+}
 .card {
   width: 90%;
   max-width: 470px;
@@ -53,11 +57,11 @@ body {
   width: 170px;
   margin-top: 30px;
 }
-.weather h1 {
+.weathers h1 {
   font-size: 80px;
   font-weight: 500;
 }
-.weather h2 {
+.weathers h2 {
   font-size: 45px;
   font-weight: 400;
   margin-top: -10px;
@@ -82,4 +86,14 @@ body {
 .wind {
   font-size: 28px;
   margin-top: -6px;
+}
+.weathers {
+  display: none;
+}
+.error {
+  text-align: left;
+  margin-left: 10px;
+  font-size: 14px;
+  margin-top: 10px;
+  display: none;
 }
