--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ body {
 .search button img {
   width: 16px;
   margin: auto;
+  cursor: pointer;
 }
 .weather-icon {
   width: 170px;
@@ -96,4 +97,26 @@ body {
   font-size: 14px;
   margin-top: 10px;
   display: none;
+}
+@media only screen and (max-width: 600px) {
+  .search input {
+    border-radius: 20px;
+    flex: none;
+    font-size: 14px;
+  }
+  .details {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .col {
+    gap: 20px;
+  }
+  .search button {
+    background: ;
+  }
+
+  .card {
+    padding: 20px;
+  }
 }
