--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,15 @@ body {
 .card {
   width: 90%;
   max-width: 470px;
-  background: linear-gradient(135deg, #a8c599, #5e3961);
+  background-image: linear-gradient(rgba(22, 49, 199, 0.2), rgba(0, 0, 0, 0.2)),
+    url(/images/map-398w.png);
+  background-repeat: no-repeat;
   color: #fff;
   margin: 100px auto 0;
   border-radius: 20px;
   padding: 40px 35px;
   text-align: center;
+  font-weight: bold;
 }
 .search {
   width: 100%;
@@ -30,8 +33,8 @@ body {
 .search input {
   border: 0;
   outline: 0;
-  background: #ebfffc;
-  color: #555;
+  background: #fff;
+  color: black;
   padding: 10px 25px;
   height: 60px;
   border-radius: 30px;
@@ -42,7 +45,7 @@ body {
 .search button {
   border: 0;
   outline: 0;
-  background: #ebfffc;
+  background: white;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -100,9 +103,16 @@ body {
 }
 @media only screen and (max-width: 600px) {
   .search input {
-    border-radius: 20px;
-    flex: none;
+    border-radius: 5px;
+    flex: 0;
     font-size: 14px;
+    margin-right: 10px;
+    padding: 5px;
+    height: 40px;
+  }
+  .search button {
+    height: 40px;
+    width: 40px;
   }
   .details {
     flex-direction: column;
@@ -111,9 +121,6 @@ body {
   }
   .col {
     gap: 20px;
-  }
-  .search button {
-    background: ;
   }
 
   .card {
